--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 version=3.0.0
-release.type=integration
+build.stamp=M2
+release.type=milestone
 natural.name=spring-framework
 project.name=Spring Framework
 project.key=SPR
