Updating for Spring Framework 3.0 M4
git-svn-id: https://src.springframework.org/svn/spring-framework/tags/spring-framework-3.0.0.M4@1728 50f2f4bb-b051-0410-bef5-90022cba6387

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 version=3.0.0
-release.type=integration
+build.stamp=M4
+release.type=milestone
 natural.name=spring-framework
 project.name=Spring Framework
 project.key=SPR
@@ -21,6 +22,3 @@ compiler.args=-enableJavadoc -warn:none
 # For development in trunk
 #release.type=integration
 #build.stamp=BUILD-SNAPSHOT
-overwrite=true
-ci.build=true
-
