--- a/org.springframework.aspects/pom.xml
+++ b/org.springframework.aspects/pom.xml
@@ -4,12 +4,12 @@
   <groupId>org.springframework</groupId>
   <artifactId>spring-aspects</artifactId>
   <packaging>jar</packaging>
-  <version>3.0.0.BUILD-SNAPSHOT</version>
+  <version>3.0.0.RC1</version>
   <parent>
     <groupId>org.springframework</groupId>
     <artifactId>spring-parent</artifactId>
     <relativePath>../org.springframework.spring-parent</relativePath>
-    <version>3.0.0.BUILD-SNAPSHOT</version>
+    <version>3.0.0.RC1</version>
   </parent>
 
   <dependencies>
