--- a/org.springframework.spring-parent/pom.xml
+++ b/org.springframework.spring-parent/pom.xml
@@ -198,6 +198,13 @@
   </profiles>
 
   <build>
+	<extensions>
+		<extension>
+			<groupId>org.springframework.build.aws</groupId>
+			<artifactId>org.springframework.build.aws.maven</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</extension>
+	</extensions>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
