--- a/org.springframework.context/pom.xml
+++ b/org.springframework.context/pom.xml
@@ -6,12 +6,12 @@
 	<groupId>org.springframework</groupId>
 	<artifactId>spring-context</artifactId>
 	<packaging>jar</packaging>
-	<version>3.0.0.BUILD-SNAPSHOT</version>
+	<version>3.0.0.RC2</version>
 	<parent>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-parent</artifactId>
 		<relativePath>../org.springframework.spring-parent</relativePath>
-		<version>3.0.0.BUILD-SNAPSHOT</version>
+		<version>3.0.0.RC2</version>
 	</parent>
 
 	<dependencies>
